Audio causes issues with Playback when PC put to Sleep, Hibernate or when Screensaver appears #88887

Closed
opened 2021-06-06 16:32:47 +02:00 by Chris · 12 comments
First-time contributor

System Information
Operating system: Windows 10
Graphics card: RTX 2080

Blender Version
Broken: 2.93.1 Release Candidate, 7edbe463d2 and 2.93 Stable Release
Worked: 2.92 Stable Release

Short description of error
When added Audio in Video Editor tab and Playback set to 'Sync to Audio', when PC is put to Hibernate, Sleep or just left for Screensaver to appear, after waking PC up the animation does not play, only moves one frame and then stops. With Playback set to 'Frame Dropping' it does play, only without sound.

After checking other bug reports I can confirm that changing Audio Device from WASAPI (which is now a default in 2.93) to OpenAL in Preferences -> System -> Sound does fix the issue, so the problem seems to be newly added device.

Exact steps for others to reproduce the error

  • Start a new 2.93 project with default user preferences
  • Add audio file in Video Editing tab
  • Set Playback in Timeline tab to 'Sync to Audio'
  • Leave PC for a while to Screensaver to appear or force Hibernate/Sleep mode
  • Return to the project and enjoy not being able to play the animation :)
**System Information** Operating system: Windows 10 Graphics card: RTX 2080 **Blender Version** Broken: 2.93.1 Release Candidate, 7edbe463d2d9 and 2.93 Stable Release Worked: 2.92 Stable Release **Short description of error** When added Audio in Video Editor tab and Playback set to 'Sync to Audio', when PC is put to Hibernate, Sleep or just left for Screensaver to appear, after waking PC up the animation does not play, only moves one frame and then stops. With Playback set to 'Frame Dropping' it does play, only without sound. After checking other bug reports I can confirm that changing Audio Device from WASAPI (which is now a default in 2.93) to OpenAL in Preferences -> System -> Sound does fix the issue, so the problem seems to be newly added device. **Exact steps for others to reproduce the error** - Start a new 2.93 project with default user preferences - Add audio file in Video Editing tab - Set Playback in Timeline tab to 'Sync to Audio' - Leave PC for a while to Screensaver to appear or force Hibernate/Sleep mode - Return to the project and enjoy not being able to play the animation :)
Author
First-time contributor

Added subscriber: @Qikin

Added subscriber: @Qikin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Marking this as a duplicate of #88879 (Choppy audio). Still it's hard to tell.

Marking this as a duplicate of #88879 (Choppy audio). Still it's hard to tell.

Added subscribers: @neXyon, @iss

Added subscribers: @neXyon, @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce this issue with wasapi, so I can help debug this if needed. I have found that switching Audio Device to None and back to WASAPI will fix this issue.

@neXyon are you aware of this issue?

I can reproduce this issue with wasapi, so I can help debug this if needed. I have found that switching Audio Device to None and back to WASAPI will fix this issue. @neXyon are you aware of this issue?
Joerg Mueller self-assigned this 2021-06-08 22:02:28 +02:00
Member

I'll look into it!

I'll look into it!
Member

@iss can you try if this patch fixes the issue? blender_wasapi_hiberation.diff

@iss can you try if this patch fixes the issue? [blender_wasapi_hiberation.diff](https://archive.blender.org/developer/F10171067/blender_wasapi_hiberation.diff)

In #88887#1176649, @neXyon wrote:
@iss can you try if this patch fixes the issue? blender_wasapi_hiberation.diff

Seems to work fine

> In #88887#1176649, @neXyon wrote: > @iss can you try if this patch fixes the issue? [blender_wasapi_hiberation.diff](https://archive.blender.org/developer/F10171067/blender_wasapi_hiberation.diff) Seems to work fine
First-time contributor

This issue was referenced by ae7ec34dfe

This issue was referenced by ae7ec34dfe2e1d97bc91a92ff911b2f8d4f41b44
First-time contributor

This issue was referenced by 19d19970e4

This issue was referenced by 19d19970e4fa6a738010dfeb2b08886f4a3dd0d5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88887
No description provided.