Fix T88887: Audio causes issues with Playback when PC put to Sleep, Hibernate or when Screensaver appears

Porting WASAPI device reinitialization from upstream.